# jaco-mpc

./: README.md  kinova.ttt
kinova-ros-modified/kinova_driver/: CMakeLists.txt  package.xml
kinova-ros-modified/kinova_driver/include/kinova_driver/: fake_joint_trajectory_action_server.h  kinova_fake_joint_trajectory_controller.h
kinova-ros-modified/kinova_driver/src/: kinova_fake_joint_trajectory_controller.cpp  test.cpp  test1.cpp
kinova-ros-modified/kinova_driver/src/joint_trajectory_action/: fake_joint_trajectory_action_server.cpp
kinova-ros-modified/kinova_driver/srv/: SolveQP.srv
kinova-ros-modified/kinova_moveit/kinova_arm_moveit_demo/src/: motion_plan.cpp  pick_place.cpp  test_accuracy.cpp
kinova_planning/: CMakeLists.txt  package.xml
kinova_planning/launch/: .launch  kinova_planning.launch  test.launch  trajectory_follower.launch
kinova_planning/scripts/: .high_level_controller.py.swp  listener.py  qp_solver.py  test.py
kinova_planning/src/: base_planning.cpp
