<?xml version="1.0"?>
<package>
  <name>kinova_planning</name>
  <version>0.1.0</version>
  <description>Highlevel_controller_for_local_localization</description>
  <license>BSD</license>
  <maintainer email="muzhihan@todo.todo">muzhihan</maintainer>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pluginlib</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_ros_perception</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>geometric_shapes</build_depend>
  <build_depend>moveit_visual_tools</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>trac_ik_lib</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>kinova_driver</build_depend>

  <run_depend>pluginlib</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_fake_controller_manager</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>moveit_ros_perception</run_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>moveit_visual_tools</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>trac_ik_lib</run_depend>
  <run_depend>orocos_kdl</run_depend>
  <run_depend>kinova_driver</run_depend>

</package>
